<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_acceuil"
            android:icon="@drawable/ic_accueil"
            android:title="@string/menu_accueil" />
        <item
            android:id="@+id/nav_symptomes"
            android:icon="@drawable/ic_info"
            android:title="@string/menu_symptome" />
        <item
            android:id="@+id/nav_center"
            android:icon="@drawable/ic_centres"
            android:title="@string/menu_center"
            />

        <item
            android:id="@+id/nav_actuality"
            android:icon="@drawable/ic_actualites"
            android:title="@string/menu_actuality" />
        <item
            android:id="@+id/nav_update"
            android:icon="@drawable/ic_compte"
            android:title="@string/menu_compte" />
        <item
            android:id="@+id/nav_deconnect"
            android:icon="@drawable/ic_deconnecter"
            android:title="@string/menu_deconnection" />
    </group>s


</menu>
