<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="400dp"
        android:layout_height="291dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.198"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/symptomes" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="389dp"
        android:layout_height="59dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/symp"
        android:textColor="#B60A0A"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.791"
        app:layout_constraintStart_toEndOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/imageView12"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="288dp"
        android:layout_height="35dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:text="@string/fiévre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="288dp"
        android:layout_height="38dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:text="@string/difres"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="286dp"
        android:layout_height="33dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:text="@string/toux"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="286dp"
        android:layout_height="40dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:text="@string/malgor"
        app:layout_constraintBottom_toTopOf="@+id/checkBox5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="290dp"
        android:layout_height="44dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:text="@string/fatigue"
        app:layout_constraintBottom_toTopOf="@+id/checkBox6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox4" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="295dp"
        android:layout_height="48dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="2dp"
        android:text="@string/mautet"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="20dp"
        android:text="@string/retourn"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="89dp"
        android:text="@string/sui"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox6" />

</androidx.constraintlayout.widget.ConstraintLayout>