<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-31dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="223dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="29dp"
                tools:layout_editor_absoluteY="3dp">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="413dp"
                    android:layout_height="194dp"
                    app:srcCompat="@drawable/savez_vous_sauver"
                    tools:layout_editor_absoluteX="5dp"
                    tools:layout_editor_absoluteY="3dp" />

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="122dp"
                    android:layout_height="196dp"
                    app:srcCompat="@drawable/mark_form"
                    tools:layout_editor_absoluteX="273dp"
                    tools:layout_editor_absoluteY="173dp" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="182dp"
                    android:layout_height="39dp"
                    android:text="@string/date_nai"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="381dp" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="191dp"
                    tools:layout_editor_absoluteY="602dp" />

                <RadioButton
                    android:id="@+id/radioButton"
                    android:layout_width="129dp"
                    android:layout_height="45dp"
                    android:text="@string/femme"
                    tools:layout_editor_absoluteX="233dp"
                    tools:layout_editor_absoluteY="483dp" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="115dp"
                    android:layout_height="43dp"
                    android:text="@string/homme"
                    tools:layout_editor_absoluteX="100dp"
                    tools:layout_editor_absoluteY="483dp" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="91dp"
                    android:layout_height="48dp"
                    android:text="@string/genre"
                    tools:layout_editor_absoluteX="5dp"
                    tools:layout_editor_absoluteY="483dp" />

                <EditText
                    android:id="@+id/editTextTextPersonName4"
                    android:layout_width="401dp"
                    android:layout_height="61dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/nom"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="320dp" />

                <EditText
                    android:id="@+id/editTextDate3"
                    android:layout_width="418dp"
                    android:layout_height="52dp"
                    android:ems="10"
                    android:inputType="date"
                    tools:layout_editor_absoluteX="-4dp"
                    tools:layout_editor_absoluteY="420dp" />

                <EditText
                    android:id="@+id/editTextTextPersonName5"
                    android:layout_width="367dp"
                    android:layout_height="47dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/longueur"
                    tools:layout_editor_absoluteY="539dp" />

                <EditText
                    android:id="@+id/editTextTextPersonName6"
                    android:layout_width="365dp"
                    android:layout_height="50dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/poids"
                    tools:layout_editor_absoluteY="592dp" />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/retourn"
                    tools:layout_editor_absoluteX="58dp"
                    tools:layout_editor_absoluteY="654dp" />

                <Button
                    android:id="@+id/button7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sui"
                    tools:layout_editor_absoluteX="233dp"
                    tools:layout_editor_absoluteY="654dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="413dp"
                android:layout_height="194dp"
                app:srcCompat="@drawable/savez_vous_sauver"
                tools:layout_editor_absoluteX="5dp"
                tools:layout_editor_absoluteY="3dp" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="122dp"
                android:layout_height="196dp"
                app:srcCompat="@drawable/mark_form"
                tools:layout_editor_absoluteX="273dp"
                tools:layout_editor_absoluteY="173dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="413dp"
            android:layout_height="194dp"
            app:srcCompat="@drawable/savez_vous_sauver"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="3dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="420dp"
            android:layout_height="76dp"
            android:text="@string/formulaire"
            android:textColor="#B60A0A"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="7dp"
            tools:layout_editor_absoluteY="197dp" />

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="122dp"
            android:layout_height="196dp"
            app:srcCompat="@drawable/mark_form"
            tools:layout_editor_absoluteX="273dp"
            tools:layout_editor_absoluteY="173dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="413dp"
        android:layout_height="194dp"
        app:srcCompat="@drawable/savez_vous_sauver"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="3dp" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="122dp"
        android:layout_height="196dp"
        app:srcCompat="@drawable/mark_form"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="173dp" />

</androidx.constraintlayout.widget.ConstraintLayout>