<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backi"
    tools:context=".RegisterActivity">


    <TextView
        android:id="@+id/creer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center"
        android:shadowColor="#000"
        android:shadowDx="1"
        android:shadowDy="10"
        android:shadowRadius="10"
        android:text="@string/compte"
        android:textSize="36sp"
        android:textStyle="bold"></TextView>

    <EditText
        android:id="@+id/editfirstname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="8"
        android:hint="Nom"
        >

        <requestFocus/>
    </EditText>


    <EditText
        android:id="@+id/editlastname"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="8"
        android:hint="Prénom"
        />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/radio_homme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/homme"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_femme"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="0dp"
            android:onClick="onRadioButtonClicked"
            android:text="@string/femme"
            android:textSize="20sp" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="Date de naissance"
            android:textSize="20dp"
            ></TextView>
        <TextView
            android:id="@+id/date_naiss"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="8"
            android:text="--/--/----"
            android:inputType="date"
            android:hint="Date de naissance"
            android:textSize="30dp"
            android:gravity="center_horizontal"
            />
    </LinearLayout>
    <EditText
        android:id="@+id/editemail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="8"
        android:inputType="textEmailAddress"
        android:hint="Email"
        />

    <EditText
        android:id="@+id/editpassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="8"
        android:inputType="textPassword"
        android:hint="Mot de passe"
        />



    <EditText
        android:id="@+id/editconformpassword"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:ems="8"
        android:inputType="textPassword"
        android:hint="Confirmé mot de passe"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"

        >

        <Button
            android:id="@+id/btnsave"
            android:layout_width="61dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/red"
            android:text="Valider"

            />

        <Button
            android:id="@+id/btncancel"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="Annuler"
            android:background="@color/red"
            />
    </LinearLayout>

</LinearLayout>